[project]
name = "trae-api"
version = "0.1.0"
description = "Make trae's builtin models openai api compatible"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "fastapi>=0.118.1",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.2",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
]

[tool.black]
line-length = 120
